2009-10-19 Add "path_effects" support for Text and Patch. See 
           examples/pylab_examples/patheffect_demo.py -JJL

2009-10-19 Add "use_clabeltext" option to clabel. If True, clabels 
           will be created with ClabelText class, which recalculates
           rotation angle of the label during the drawing time. -JJL

2009-10-16 Make AutoDateFormatter actually use any specified
           timezone setting.This was only working correctly
           when no timezone was specified. - RMM

2009-09-27 Beginnings of a capability to test the pdf backend. - JKS

2009-09-27 Add a savefig.extension rcparam to control the default
           filename extension used by savefig. - JKS

===============================================
2009-09-21 Tagged for release 0.99.1

2009-09-20 Fix usetex spacing errors in pdf backend. - JKS

2009-09-20 Add Sphinx extension to highlight IPython console sessions,
           originally authored (I think) by Michael Droetboom. - FP

2009-09-20 Fix off-by-one error in dviread.Tfm, and additionally protect
           against exceptions in case a dvi font is missing some metrics. - JKS

2009-09-15 Implement draw_text and draw_tex method of backend_base using
           the textpath module. Implement draw_tex method of the svg
           backend. - JJL

2009-09-15 Don't fail on AFM files containing floating-point bounding boxes - JKS

2009-09-13 AxesGrid : add modified version of colorbar. Add colorbar
           location howto. - JJL

2009-09-07 AxesGrid : implemented axisline style.
           Added a demo examples/axes_grid/demo_axisline_style.py- JJL

2009-09-04 Make the textpath class as a separate moduel
           (textpath.py). Add support for mathtext and tex.- JJL

2009-09-01 Added support for Gouraud interpolated triangles.
           pcolormesh now accepts shading='gouraud' as an option. - MGD

2009-08-29 Added matplotlib.testing package, which contains a Nose
           plugin and a decorator that lets tests be marked as